# fastsort

./: CMakeLists.txt  FileStreamer.hpp  LICENSE  README.md  Sort.hpp  main.cpp
test/: CMakeLists.txt  CMakeLists.txt.in  FileStreamerTest.hpp  SortTest.hpp  testmain.cpp
